// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CryptoListWalletItem /> fetch fail test 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "flexDirection": "row",
          "marginVertical": 5,
          "padding": 10,
        },
        {
          "backgroundColor": "purple",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={{}}
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 25,
              "fontWeight": "700",
            }
          }
        >
          Bitcoin
        </Text>
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
          10.01
           
          BTC
        </Text>
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
          £
          0.00
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CryptoListWalletItem /> snapshot test 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "flexDirection": "row",
          "marginVertical": 5,
          "padding": 10,
        },
        {
          "backgroundColor": "purple",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        style={
          {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={{}}
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 25,
              "fontWeight": "700",
            }
          }
        />
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
           
          -
        </Text>
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
          £
          NaN
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CryptoListWalletItem /> wallet data test 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 10,
          "flexDirection": "row",
          "marginVertical": 5,
          "padding": 10,
        },
        {
          "backgroundColor": "purple",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={{}}
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 25,
              "fontWeight": "700",
            }
          }
        >
          Bitcoin
        </Text>
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
          10.01
           
          BTC
        </Text>
        <Text
          style={
            [
              {
                "flex": 1,
                "fontWeight": "700",
              },
              {
                "color": "black",
              },
            ]
          }
        >
          £
          50.05
        </Text>
      </View>
    </View>
  </View>
</View>
`;
